--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 
 // Components 
 @import "../components/Layout/styles.scss";
+@import "../components/TextInput/styles.scss";
 
 body {
   margin: 0;
