--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 
 // Views
 @import "../pages/Login/styles.scss";
+@import "../pages/Registry/styles.scss";
 
 // Components 
 @import "../components/Layout/styles.scss";
