--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -1,7 +1,6 @@
 .login {
-  font-family: 'Roboto';
-
   &-container {
+    font-family: 'Roboto';
     min-width: 290px;
     display: flex;
     flex-direction: column;
@@ -10,11 +9,16 @@
     padding: 32px;
     border-radius: 6px;
     box-shadow: 1px 0px 13px 2px rgba(0,0,0,0.05);
+
+    .logo-svg {
+      width: 120px;
+      height: 120px;
+    }
   }
 
   &-inputs {
     width: 100%;
-    margin-top: 48px;
+    margin-top: 40px;
   }
 
   &-button {
