Complete home page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "@fontsource/roboto";
 
 // Views
+@import "../pages/Home/styles.scss";
 @import "../pages/Login/styles.scss";
 @import "../pages/Registry/styles.scss";
 
