--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "../pages/Home/styles.scss";
 @import "../pages/Login/styles.scss";
 @import "../pages/Registry/styles.scss";
+@import "../pages/SetupBusiness/styles.scss";
 
 // Components 
 @import "../components/Layout/styles.scss";
