--- a/src/pages/SetupBusiness/styles.scss
+++ b/src/pages/SetupBusiness/styles.scss
@@ -1,5 +1,6 @@
 .setup-business {
   &__essentials {
+    width: 100%;
     display: flex;
     padding: 32px 0;
     
@@ -8,6 +9,7 @@
     }
   }
   &__name {
+    width: 100%;
     display: flex;
   }
 }
