--- a/src/pages/SetupBusiness/styles.scss
+++ b/src/pages/SetupBusiness/styles.scss
@@ -7,6 +7,12 @@
     .upload-logo__icon {
       height: 55px;
     }
+
+    .logo-image {
+      display: inline;
+      height: 100%;
+      width: auto;
+    }
   }
   &__name {
     width: 100%;
