--- a/src/pages/SetupBusiness/styles.scss
+++ b/src/pages/SetupBusiness/styles.scss
@@ -25,4 +25,19 @@
     justify-content: center;
     margin-left: 24px;
   }
+  
+  &__properties {
+    width: 100%;
+    display: flex;
+  
+    .add-icon {
+      width: 50px;
+      height: 50px;
+    }
+
+    .upload-product__icon {
+      width: 50px;
+      height: 50px;
+    }
+  }
 }
