--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 // Components 
 @import "../components/Layout/styles.scss";
 @import "../components/TextInput/styles.scss";
+@import "../components/Dropdown/styles.scss";
 
 body {
   margin: 0;
