--- a/src/pages/SetupBusiness/styles.scss
+++ b/src/pages/SetupBusiness/styles.scss
@@ -4,12 +4,13 @@
   &__essentials {
     width: 100%;
     display: flex;
-    padding: 32px 0;
+    padding: 32px 0 12px;
     
     .upload-logo__icon {
       height: 55px;
     }
   }
+
   &__name {
     width: 100%;
     display: flex;
@@ -32,5 +33,14 @@
       width: 50px;
       height: 50px;
     }
+  }
+
+  &__category-checkbox {
+    margin-top: 16px;
+  }
+
+  &__submit-button {
+    width: 40% !important;
+    margin: 20px auto 12px auto;
   }
 }
