Add user profile page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import "../pages/Login/styles.scss";
 @import "../pages/Registry/styles.scss";
 @import "../pages/SetupBusiness/styles.scss";
+@import "../pages/UserProfile/styles.scss";
 
 // Components 
 @import "../components/Layout/styles.scss";
