--- a/src/pages/SetupBusiness/styles.scss
+++ b/src/pages/SetupBusiness/styles.scss
@@ -55,3 +55,13 @@
   max-width: 78px;
   margin: 0 !important;
 }
+
+.new-product__modal {
+  width: 60%;
+  height: 50%;
+}
+
+.done-button__icon {
+  width: 20px;
+  height: 20px;
+}
