--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -22,8 +22,11 @@
   }
 
   &-button {
+    &__container {
+      width: 100%;
+      margin-top: 40px;
+    }
     width: 100%;
-    margin-top: 40px;
   }
 
   &-registry-section {
