Finish modal styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @import "../components/Layout/styles.scss";
 @import "../components/TextInput/styles.scss";
 @import "../components/Dropdown/styles.scss";
+@import "../components/Modal/styles.scss";
 
 body {
   margin: 0;
