Add reputation page and its components

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,9 @@
 @import "../pages/SetupBusiness/styles.scss";
 @import "../pages/UserProfile/styles.scss";
 
+// Views components
+@import "../pages/Reputation/components/styles.scss";
+
 // Components 
 @import "../components/Layout/styles.scss";
 @import "../components/TextInput/styles.scss";
