--- a/src/pages/BusinessDetail/styles.scss
+++ b/src/pages/BusinessDetail/styles.scss
@@ -1,3 +1,13 @@
-.upload-logo__icon {
-  height: 55px;
+@import "../../components/Carrousel/styles.scss";
+
+.business-detail {
+  .upload-logo__icon {
+    height: 55px;
+  }
+
+  &__product-detail-icon {
+    height: 16px;
+    width: 16px;
+    transform: rotate(90deg);
+  }
 }
