Change font-family and adjust styling

--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -1,6 +1,6 @@
 .login {
   &-container {
-    font-family: 'Roboto';
+    font-family: 'Raleway', sans-serif;
     min-width: 290px;
     display: flex;
     flex-direction: column;
