--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -17,3 +17,9 @@
 .search-box.active {
   box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.2);
 }
+
+.default-logo-list {
+  width: 50px;
+  height: 50px;
+  opacity: 60%;
+}
