--- a/src/pages/Reputation/components/styles.scss
+++ b/src/pages/Reputation/components/styles.scss
@@ -24,3 +24,18 @@
     width: 20px;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .reputation-graphic {
+    &__icon {
+      width: 50px;
+      height: 50px;
+    }
+  
+    &__pointer {
+      margin-top: 8px;
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
