Create filter orders component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,7 @@
 @import "../components/TextInput/styles.scss";
 @import "../components/Dropdown/styles.scss";
 @import "../components/Modal/styles.scss";
+@import "../components/OrdersFilter/styles.scss";
 
 body {
   margin: 0;
