--- a/src/components/OrdersFilter/styles.scss
+++ b/src/components/OrdersFilter/styles.scss
@@ -10,3 +10,16 @@
     transform: rotate(0deg);
   }
 }
+
+.order-date__dropdown-icon {
+  height: 12px;
+  width: 12px;
+  margin-left: 8px;
+  transform: rotate(180deg);
+  transition: transform 250ms;
+
+  &--open {
+    transition: transform 250ms;
+    transform: rotate(0deg);
+  }
+}
