fix header logo sizing

--- a/src/components/Layout/styles.scss
+++ b/src/components/Layout/styles.scss
@@ -14,6 +14,11 @@
   }
 }
 
+.header-user-icon {
+  width: 38px;
+  width: 38px;
+}
+
 @media screen and (max-width: 768px) {
   .components-container {
     padding: 0 20px;
