Add business reputation to business list

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,7 @@
 @import "../components/Dropdown/styles.scss";
 @import "../components/Modal/styles.scss";
 @import "../components/OrdersFilter/styles.scss";
+@import "../components/List/BusinessListItem/styles.scss";
 
 body {
   margin: 0;
