--- a/src/pages/BusinessDetail/components/styles.scss
+++ b/src/pages/BusinessDetail/components/styles.scss
@@ -17,7 +17,31 @@
     display: none;
   }
 
+  .fc-button-primary {
+    background-color: #5BC0EB;
+    border-color: #5BC0EB;
+  }
+
   table {
     font-size: 14px;
   }
+}
+
+.fc .fc-button-primary:hover {
+  background-color: rgba(91, 192, 235, 0.6);
+  border-color: rgba(91, 192, 235, 0.6);
+}
+
+.fc .fc-button-primary:not(:disabled):active, .fc .fc-button-primary:not(:disabled).fc-button-active {
+  background-color: rgba(91, 192, 235, 0.6);
+  border-color: rgba(91, 192, 235, 0.6);
+  border: unset;
+}
+
+.fc-h-event .fc-event-main {
+  background-color: #E55934;
+}
+
+.fc-h-event {
+  border-color: #E55934;
 }
