--- a/src/pages/BusinessDetail/styles.scss
+++ b/src/pages/BusinessDetail/styles.scss
@@ -1,4 +1,5 @@
 @import "../../components/Carrousel/styles.scss";
+@import "../../components/Location/styles.scss";
 @import "./components/styles.scss";
 
 body {
